<resources>
    <string name="app_name">嗨生活</string>
    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="gouwu">购物</string>
    <string name="jiudian">酒店</string>
    <string name="revert_pass_word">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login_title">登录</string>
    <string name="close">关闭</string>
    <string name="zan_suc">点赞成功</string>
    <string name="person_bouns">%1$s的红包</string>
    <string name="zan_cancel_suc">取消赞成功</string>
    <string name="comment_suc">评价成功</string>
    <string name="comment_fail">评价失败</string>
    <string name="zan_fail">点赞失败</string>
    <string name="no_mark">您还没有打分</string>
    <string name="no_select_tag">您还没有选择标签</string>
    <string name="input_comment_content">请输入评论内容</string>
    <string name="txt_phone_login">手机登录</string>
    <string name="txt_account_login">账号登录</string>
    <string name="txt_phone_number">手机号</string>
    <string name="txt_yanzhengma">验证码</string>
    <string name="txt_comment_suc">评论成功</string>
    <string name="txt_comment_fail">评论失败</string>
    <string name="txt_mima">密  码</string>
    <string name="txt_account">账  号</string>
    <string name="hint_phone_number">请输入手机号</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_yanzhengma">请输入验证码</string>
    <string name="hint_mima">请输入密码</string>
    <string name="giftcard_rest_amount">礼品卡账户余额</string>
    <string name="hint_input_account">请输入账号</string>
    <string name="toast_chech_your_phone_number">请检查您输入的手机号码</string>
    <string name="toast_password_isSure">密码是6-20位英文字母、数字或符号</string>
    <string name="txt_lx_three">不可连续三码（含）以上数字或字母（如：２３４、ＢＣＤ、ＦＥＧ）</string>
    <string name="txt_mima_equlas">密码不能和手机号相同</string>
    <string name="txt_mima_two">两次输入密码不一致</string>
    <string name="txt_get_yanzhenma">获取验证码</string>
    <string name="txt_wangji_mima">忘记密码</string>
    <string name="txt_pj_all">全部(%1$s)</string>
    <string name="txt_pj_good">好评(%1$s)</string>
    <string name="txt_pj_normal">中评(%1$s)</string>
    <string name="txt_pj_bad">差评(%1$s)</string>
    <string name="travel_orignal_start_price">原价：¥%1$s/人</string>
    <string name="travel_detail_per">%1$s个</string>
    <string name="travel_detail_every">%1$s次</string>
    <string name="travel_detail_feature_dinner">特色团餐：%1$s</string>
    <string name="travel_bank_coupon">银行优惠</string>
    <string name="travel_city_diff_intro">(%1$s到%2$s的费用自理~~)</string>
    <string name="txt_login_str">登录</string>
    <string name="transfer_limit_instruction">现金的支付限额有账户的认证等级、收款卡是否为同名卡等因素共同确定，转账信息提交后会确定是否超限。</string>
    <string name="transfer_limit_value">单笔%1$.2f&#160;&#160;单日消费%2$.2f元</string>
    <string name="transfer_limit_name">%1$s（尾号%2$s）</string>
    <string name="cardNmu_cardName">%1$s&#160;&#160;%2$s</string>
    <string name="float_price">¥%1$.2f</string>
    <string name="transfer_cardName_tailNum">%1$s(%2$s)</string>
    <string name="time_table_insturction">若在2小时服务时间外转账、或因系统维护2小时服务暂停时均为次日23:59到账</string>
    <string name="time_table_instruction_now">若转到朋友的嗨生活账户可实时到账。</string>
    <string name="charge_amount_limit">该卡本次可转%1$.2f元</string>
    <string name="charge_money">%1$.2f元</string>
    <string name="charge_cardType_tail">%1$s(尾号%2$s)</string>
    <string name="card_amount_can_use">可用额度%1$.2f元</string>
    <string name="cash_success">预计两小时内&#160;&#160;(%1$s)&#160;&#160;到账</string>
    <string name="user_center">个人中心</string>
    <string name="integral_jifen_youhui">积分优惠</string>
    <string name="jbf_without_plan">无合作计划</string>
    <string name="jfb_select_exchange_mileage">请选择可兑换的里程</string>
    <string name="jbf_zjf">赚积分</string>
    <string name="jfb_bank_jf">银行积分</string>
    <string name="jfb_store_jf">商家积分</string>
    <string name="jfb_sbxyk">申办信用卡</string>
    <string name="jfb_share_app">分享app</string>
    <string name="jbf_kwh_title">Hi Life汇</string>
    <string name="jbf_jf_share">积分分享</string>
    <string name="jbf_account_gy">账户概要</string>
    <string name="jbf_setting">设置</string>
    <string name="jbf_my_notice">我的提醒</string>
    <string name="jbf_my_collect">我的收藏</string>
    <string name="my_collect">个人中心-->我的收藏</string>
    <string name="jbf_zhgy_title">账户概要</string>
    <string name="jbf_my_wallet">我的钱包</string>
    <string name="jbf_lpk">礼品卡(%1$s)</string>
    <string name="jbf_hbye">红包余额</string>
    <string name="jbf_yhq">优惠券</string>
    <string name="giftcard_buy_mind_card">选购心意卡</string>
    <string name="jbf_sjdd">商家订单</string>
    <string name="jbf_cardking_fj">Hi Life积分</string>
    <string name="jbf_bank_fj">银行积分</string>
    <string name="jbf_money_ccount">¥%1$s</string>
    <string name="jbf_available_ccount">%1$s张可用</string>
    <string name="jbf_ds_account">%1$s笔代收</string>
    <string name="jbf_available_jf_account">%1$s分可用</string>
    <string name="jbf_query">查询</string>
    <string name="jbf_lpk_detail">礼品卡明细</string>
    <string name="giftcard_recv">礼品卡领取</string>
    <string name="jbf_hb_detail">红包明细</string>
    <string name="jbf_yhq_detail">优惠券明细</string>
    <string name="jbf_sjdd_detail">商家订单明细</string>
    <string name="jbf_cardking_fj_detail">Hi Life积分明细</string>
    <string name="jbf_bank_jf_detail">银行卡积分明细</string>
    <string name="jbf_jfmx_title">积分明细</string>
    <string name="jfb_jfjy">积分结余: %1$s</string>
    <string name="jbf_jf_share_title">积分分享</string>
    <string name="jfb_add_name">添加名单</string>
    <string name="jfb_click_give">点击赠送</string>
    <string name="jfb_add_new_name">添加新名单</string>
    <string name="tv_credit_account_jiebang">解绑</string>
    <string name="jfb_nick_name">昵称</string>
    <string name="jfb_nick_name_hint">请输入昵称</string>
    <string name="jfb_phone">手机号码</string>
    <string name="jfb_phone_hint">请输入手机号码</string>
    <string name="jfb_relation">与卡主关系</string>
    <string name="jfb_relation_hint">请选择关系</string>
    <string name="jfb_commit">提交</string>
    <string name="jfb_nickname_no_empty">昵称不能为空</string>
    <string name="jfb_phone_no_empty">手机号不能为空</string>
    <string name="jfb_get_phone_number_fail">获取联系人手机号失败</string>
    <string name="jfb_get_name_fail">获取联系人姓名失败</string>
    <string name="integral_dui_li_cheng">兑里程</string>
    <string name="integral_flight_plan_table">飞行里程兑换表</string>
    <string name="integral_dui_you_ka">兑油卡</string>
    <string name="jbf_qb">钱包</string>
    <string name="integral_dui_hua_fei">兑话费</string>
    <string name="integral_dui_liu_liang">兑流量</string>
    <string name="integral_dui_xian_jin">兑现金</string>
    <string name="integral_tijiao">提交</string>
    <string name="integral_title_travler_plan">常旅客计划</string>
    <string name="intergral_exchange_zhunze">兑换准则</string>
    <string name="intergral_exchange_mingxi">兑换明细</string>
    <string name="intergral_exchange_mingxi_1">请添加兑换明细</string>
    <string name="integeral_china_yidong">中国移动</string>
    <string name="integral_china_liantong">中国联通</string>
    <string name="integral_china_dianxin">中国电信</string>
    <string name="integral_input_phone_number">请输入手机号码</string>
    <string name="integral_ping_tai_jifen">平台积分</string>
    <string name="integral_integral">积分</string>
    <string name="integral_money">金额</string>
    <string name="integral_gongli">公里</string>
    <string name="integral_add_new_traveller">添加新的常旅客</string>
    <string name="integral_exchange_flow_money">总兑换流量金额：</string>
    <string name="integral_exchange_phone_money">总兑换话费金额：</string>
    <string name="integral_exchange_mileage">总兑换里程数：</string>
    <string name="integral_exchange_money">总兑换金额：</string>
    <string name="integral_zhong_shi_hua">中石化</string>
    <string name="integral_zhong_shi_you">中石油</string>
    <string name="integral_exchange_youka_money">总兑换油卡金额：</string>
    <string name="integral_bug_new_card">购置新卡</string>
    <string name="integral_song_huo_address">送货地址</string>
    <string name="integral_card_king_desc">积分概要\n用于兑换抽奖励的积分</string>
    <string name="integral_hui_yuan_rank">会员等级：</string>
    <string name="integral_hui_yuan_rank2">会员等级</string>
    <string name="integral_hui_yuan_start">会员始于：</string>
    <string name="integral_hai_jifen_mingxi">嗨生活积分明细</string>
    <string name="integral_xin_yongka_mingxi">信用卡积分明细</string>
    <string name="integral_red_bo_total">积分总额：</string>
    <string name="hini_input_red_bao_money">请输入积分</string>
    <string name="integral_zensong">赠送</string>
    <string name="integral_vip_number">会员卡号码</string>
    <string name="integral_add_travller_plan">添加到我的常旅客计划</string>
    <string name="integral_welcome_exchange_user">尊敬的###，您好\n\u3000\u3000您可将红包里的
        积分礼卷分享给您兑换名单里的成员。</string>
    <string name="integral_jine_no">金額不足，请修正</string>
    <string name="integral_just_get">立即使用</string>
    <string name="integral_gift_card">礼品卡</string>
    <string name="gift_card_store">礼品卡商城</string>
    <string name="gift_send_mind">送心意</string>
    <string name="gift_card_detail">礼品卡明细</string>
    <string name="giftcard_active">激活实体卡</string>
    <string name="giftcard_give">送礼品卡</string>
    <string name="integral_fen_hot">分热度</string>
    <string name="giftcard_shop_spec_card">特色心意卡</string>
    <string name="giftcard_shop_notice">给老人的心意，给老人的祝福...</string>
    <string name="integral_welcome_exchange_mileage">尊敬的###，您好\n\u3000\u3000我们为您汇总
        了您所添加的航空公司与Hi Life平台以及您所拥有的信用卡之间的合作兑换计划。\n详情请见下图</string>
    <string name="integral_detail">查看详情</string>
    <string name="integral_user_lack_integral">您的平台账户积分不足</string>
    <string name="integral_exchange_money_tv">兑换金额</string>
    <string name="intergral_exchange">兑换</string>
    <string name="hint_integral_input_your_youka_number">请输入油卡编号</string>
    <string name="integral_contact_us">联系我们</string>
    <string name="integral_input_integral_num">请输入兑换的积分</string>
    <string name="integral_input_money_num">请输入金额</string>
    <string name="integral_no_integer">请检查输入的数字</string>
    <string name="integral_select_integral_bili">请选择积分兑换比例</string>
    <string name="buy_suces">购买成功</string>
    <string name="set_pay_message">设置您的支付密码,安全愉快的使用Hi生活服务。</string>
    <string name="now_send">立即发送></string>
    <string name="now_look">立即查看></string>
    <string name="tv_dailyrent_city">城市</string>
    <string name="hint_dailyrent_input_depart_city">请输入出发城市</string>
    <string name="tv_dailyrent_depart_place">出发地</string>
    <string name="tv_dailyrent_use_bus_date">用车时间</string>
    <string name="tv_dailyrent_use_bus_duration">用车时长</string>
    <string name="tv_dailyrent_input_depart_place">请输入出发地</string>
    <string name="tv_dailyrent_input_use_time">请输入用车时间</string>
    <string name="text_search">搜索</string>
    <string name="set_pay_new_password">新密码</string>
    <string name="set_pay_confirm_password">确认密码</string>
    <string name="set_pay_hint_six_number_password">请输入6位数字密码</string>
    <string name="set_pay_hint_resix_number_password">再次输入密码</string>
    <string name="setting_ok">确认</string>
    <string name="setting_sfz">身份证</string>
    <string name="setting_safe_verify">进行安全验证</string>
    <string name="setting_bank_card_num">银行卡号</string>
    <string name="setting_input_bank_card_num_hint">请输入银行卡号</string>
    <string name="setting_bank_card_name">银行名称</string>
    <string name="setting_name_gerated">系统根据卡号自动生成</string>
    <string name="setting_input_zj_code">请输入证件号码</string>
    <string name="setting_input_card_holder_name">持卡人姓名</string>
    <string name="setting_input_card_holder_name2">账户证件持卡人</string>
    <string name="setting_agree">同意</string>
    <string name="setting_protocal1">《快捷签约协议》</string>
    <string name="setting_protocal2">《交通银行储蓄卡快捷支付业务线上支付协议》</string>
    <string name="register_input_model1">0123456789</string>
</resources>