<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_jfb_round_corner5dp_white_solid"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/set_pay_message"
        android:textColor="@color/color_4D4D4D"
        android:textSize="@dimen/title_size_12"
        android:layout_marginBottom="12dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/set_pay_new_password"
                android:textColor="@color/order_detail_wordblack"
                android:textSize="@dimen/title_size_12"/>

            <EditText
                android:id="@+id/etOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/register_input_model1"
                android:hint="@string/set_pay_hint_six_number_password"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColorHint="#c9c4c1"
                android:textSize="@dimen/title_size_12"/>

            <RelativeLayout
                android:id="@+id/rlEye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rounded_rectangle_white"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    android:text="@string/txt_get_yanzhenma"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:visibility="invisible"/>

                <ImageButton
                    android:id="@+id/ibPasswordVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/reset_eye_closed"/>
            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/set_pay_confirm_password"
                android:textColor="@color/order_detail_wordblack"
                android:textSize="@dimen/title_size_12"/>

            <EditText
                android:id="@+id/etTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/register_input_model1"
                android:hint="@string/set_pay_hint_resix_number_password"
                android:maxLength="6"
                android:singleLine="true"
                android:textColorHint="#c9c4c1"
                android:textSize="@dimen/title_size_12"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/txt_get_yanzhenma"
                android:visibility="invisible"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tvConfirm"
            style="@style/setting_next_tv"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/setting_ok"/>
    </LinearLayout>
</LinearLayout>