<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#f9f9f9"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_round_corner_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:id="@+id/ll_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#727272"
                android:textSize="16sp"
                android:text="@string/tv_dailyrent_city"/>
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00B5D3"
                android:textSize="16sp"
                android:text="@string/hint_dailyrent_input_depart_city"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="#ececec"/>
        <LinearLayout
            android:id="@+id/ll_start_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#727272"
                android:textSize="16sp"
                android:text="@string/tv_dailyrent_depart_place"/>
            <TextView
                android:id="@+id/tv_start_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selfedrive_blue_00B5D3"
                android:textSize="16sp"
                android:textColorHint="#B1C6C9"
                android:hint="@string/tv_dailyrent_input_depart_place"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="#ececec" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_round_corner_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:id="@+id/ll_startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#727272"
                android:textSize="16sp"
                android:text="@string/tv_dailyrent_use_bus_date"/>
            <TextView
                android:id="@+id/tv_startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#B1C6C9"
                android:textSize="16sp"
                android:text="@string/tv_dailyrent_input_use_time"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="#ececec"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#727272"
                android:textSize="16sp"
                android:text="@string/tv_dailyrent_use_bus_duration"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/iv_reduce"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/icon_round_cut_red"/>
            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D84043"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="0.5"/>

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/icon_round_add_red"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="#ececec" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_selector"
        android:text="@string/text_search"
        android:textSize="20sp"
        android:textColor="#fff"
        android:layout_margin="20dp"/>
</LinearLayout>